--- a/mount/prometheus/prometheus.yml
+++ b/mount/prometheus/prometheus.yml
@@ -7,6 +7,9 @@ global:
 # Here it's Prometheus itself.
 scrape_configs:
   - job_name: 'kafka'
-    scrape_interval: 10s
-    target_groups:
-      - targets: ['kafka-jmx-exporter:8080']
+    static_configs:
+    - targets: ['kafka-jmx-exporter:8080']
+
+  - job_name: 'prometheus'
+    static_configs:
+    - targets: ['prometheus:9090']
