update_version_jmx/zookeeper_dockerfile_1

--- a/zookeeper/Dockerfile
+++ b/zookeeper/Dockerfile
@@ -1,8 +1,8 @@
 FROM java:8
 
 RUN mkdir -p /opt /var/sky/zookeeper/data /var/sky/zookeeper/conf \
-    && wget -q -O - https://archive.apache.org/dist/zookeeper/zookeeper-3.4.8/zookeeper-3.4.8.tar.gz | tar -xzf - -C /opt \
-    && mv /opt/zookeeper-3.4.8 /opt/zookeeper
+    && wget -q -O - https://archive.apache.org/dist/zookeeper/zookeeper-3.6.3/apache-zookeeper-3.6.3.tar.gz | tar -xzf - -C /opt \
+    && mv /opt/zookeeper-3.6.3 /opt/zookeeper
 
 COPY zoo.cfg /opt/zookeeper/conf/zoo.cfg
 WORKDIR /opt/zookeeper
