--- a/mount/prometheus/prometheus.yml
+++ b/mount/prometheus/prometheus.yml
@@ -9,6 +9,7 @@ scrape_configs:
   - job_name: 'kafka'
     static_configs:
     - targets: ['kafka-jmx-exporter:8080']
+    - targets: ['kafka-exporter:9308']
 
   - job_name: 'prometheus'
     static_configs:
