--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,14 +36,14 @@ services:
       - HTTP_PORT=8080
       - JMX_EXPORTER_CONFIG_FILE=kafka.yml
 
-  # kafka-exporter:
-  #   image: danielqsj/kafka-exporter
-  #   container_name: kafka-exporter
-  #   ports:
-  #     - 9308:9308
-  #   links:
-  #     - kafka
-  #   command: --kafka.server=kafka:9092
+  kafka-exporter:
+    image: danielqsj/kafka-exporter
+    container_name: kafka-exporter
+    ports:
+      - 9308:9308
+    links:
+      - kafka
+    command: --kafka.server=kafka:9092
 
   prometheus:
     container_name: prometheus
