--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,12 @@ services:
     ports:
       - "9092:9092"
     environment:
-      - KAFKA_ADVERTISED_HOST_NAME=127.0.0.1
-      - KAFKA_ADVERTISED_PORT=9092
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
-      - KAFKA_CREATE_TOPICS=customer:3:1,audit:3:1
+      - KAFKA_BROKER_ID=1
+      - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://172.24.18.44:9092
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CREATE_TOPICS=customer1:3:1,audit1:3:1
       - JMX_PORT=9999
 
   kafka-jmx-exporter:
@@ -39,11 +40,12 @@ services:
   kafka-exporter:
     image: danielqsj/kafka-exporter
     container_name: kafka-exporter
-    ports:
-      - 9308:9308
     links:
       - kafka
-    command: --kafka.server=kafka:9092
+    ports:
+      - 9308:9308
+    command:
+      - '--kafka.server=172.24.18.44:9092'
 
   prometheus:
     container_name: prometheus
