--- a/mount/prometheus/prometheus.yml
+++ b/mount/prometheus/prometheus.yml
@@ -6,9 +6,12 @@ global:
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
-  - job_name: 'kafka'
+  - job_name: 'kafka-jmx'
     static_configs:
     - targets: ['kafka-jmx-exporter:8080']
+
+  - job_name: 'kafka-exporter'
+    static_configs:
     - targets: ['kafka-exporter:9308']
 
   - job_name: 'prometheus'
